--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemailer": "^6.7.0"
   }
 }
